修复 demo 运行态阻塞并补齐时间页面验收